--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/farid95g/bridge/issues"
   },
-  "homepage": "https://github.com/farid95g/bridge#readme"
+  "homepage": "https://github.com/farid95g/bridge#readme",
+  "devDependencies": {
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1"
+  }
 }
