--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "css-loader": "^6.5.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "style-loader": "^3.3.1"
   }
 }
