--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   },
   "dependencies": {
     "css-loader": "^6.5.1",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1"
   }
 }
