publicPath added and ignored pure function components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,5 +37,8 @@
             "before": false,
             "after": true
         }]
-    }
+    },
+    "react/prefer-stateless-function": [
+        2, { "ignorePureComponents": true }
+    ]
 }
