--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack serve --mode development",
-    "lint": "eslint src/**/*.js",
-    "lint-fix": "eslint src/**/*.js --fix"
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "lint-fix": "eslint \"src/**/*.{js,jsx}\" --fix"
   },
   "repository": {
     "type": "git",
@@ -43,6 +43,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1"
   }
