--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "css-loader": "^6.5.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
