--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "webpack --mode production",
     "start": "webpack serve --mode development",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
-    "lint-fix": "eslint \"src/**/*.{js,jsx}\" --fix"
+    "lint-fix": "eslint \"src/**/*.{js,jsx}\" --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -18,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/farid95g/bridge/issues"
   },
-  "homepage": "https://github.com/farid95g/bridge#readme",
+  "homepage": "https://farid95g.github.io/bridge",
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/eslint-parser": "^7.16.5",
@@ -30,6 +32,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1",
