--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server",
-    "start": "npm run webpack-dev-server -- --env mode=development",
-    "build": "npm run webpack -- --env mode=production",
+    "start": "webpack serve --config config/webpack.dev.js",
+    "build": "webpack --config config/webpack.prod.js",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "lint-fix": "eslint \"src/**/*.{js,jsx}\" --fix",
     "predeploy": "npm run build",
